<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0479AE"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/title_nuevo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />
	
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/nuve_fondo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nuve" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView3"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="48dp"
        android:text="@string/N_jugador"
        android:textColor="#ffffff" />
    
	<EditText
        android:id="@+id/edit_jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_nuevo_user"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffffff" />
	
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/nombre_jugador"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_nuevo_user"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_nombre"
        android:layout_below="@+id/edit_nombre"
        android:layout_marginTop="18dp"
        android:background="#64b5f6"
        android:drawableLeft="@drawable/nuevo"
        android:paddingLeft="10dp"
        android:text="@string/altas_user"
        android:textColor="#ffffff" />

 

</RelativeLayout>